` PlantUML <plantuml.com> State Diagram.
` Generated from src/main/java/io/temporal/internal/statemachines/SignalExternalStateMachine.java
` by io.temporal.internal.statemachines.CommandsGeneratePlantUMLStateDiagramsTest.


@startuml
title SignalExternal State Transitions

[*] --> CREATED
CREATED --> SIGNAL_EXTERNAL_COMMAND_CREATED: SCHEDULE
SIGNAL_EXTERNAL_COMMAND_CREATED --> SIGNAL_EXTERNAL_COMMAND_CREATED: SIGNAL_EXTERNAL_WORKFLOW_EXECUTION
SIGNAL_EXTERNAL_COMMAND_CREATED --> CANCELED: CANCEL
SIGNAL_EXTERNAL_COMMAND_CREATED --> SIGNAL_EXTERNAL_COMMAND_RECORDED: SIGNAL_EXTERNAL_WORKFLOW_EXECUTION_INITIATED
SIGNAL_EXTERNAL_COMMAND_RECORDED --> SIGNAL_EXTERNAL_COMMAND_RECORDED: CANCEL
SIGNAL_EXTERNAL_COMMAND_RECORDED --> SIGNALED: EXTERNAL_WORKFLOW_EXECUTION_SIGNALED
SIGNAL_EXTERNAL_COMMAND_RECORDED --> FAILED: SIGNAL_EXTERNAL_WORKFLOW_EXECUTION_FAILED
SIGNALED --> [*]
FAILED --> [*]
CANCELED --> [*]
center footer Copyright (C) 2020 Temporal Technologies, Inc. All Rights Reserved.
@enduml
